# privateGPT

./: example.env  ingest.py  privateGPT.py  pyproject.toml
